[gd_scene load_steps=4 format=2]

[ext_resource path="res://materials/right.tres" type="Material" id=1]
[ext_resource path="res://scripts/bullets/motherBullet.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.0600845

[node name="motherBullet" type="Spatial"]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="." groups=["playerBullet"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 0.0830036, 0, 0, 0, 0.0830036, 0, 0, 0, 0.0830036, 0, 0, 0 )
material = ExtResource( 1 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
